crates/carta/tests/snapshots/golden_writer__org__table__table-attr.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
| h1 | h2 |
|----+----|
| a  | b  |
#+caption: Captioned and attributed
