crates/carta/tests/snapshots/golden_writer__org__table__table-caption-blocks.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
| h |
|---|
| v |
#+caption: First caption paragraph\\
Second caption paragraph
