crates/carta/tests/snapshots/golden_writer__org__table__table-cell-blank.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
| left | right |
|------+-------|
| x    |       |
|      | y     |
