crates/carta/tests/snapshots/golden_writer__org__table__table-cell-blocks.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
| name  | notes           |
|-------+-----------------|
| alpha | first paragraph |
|       |                 |
|       | - one           |
|       | - two           |
