crates/carta/tests/snapshots/golden_writer__org__table__table-empty-cell.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
| A                      | B      | C  | D  |
|------------------------+--------+----+----|
| #+begin_html           | \vskip | -  | ok |
|   <!-- placeholder --> |        | -  |    |
| #+end_html             |        |    |    |
